src/test/ui/const-generics/impl-trait-with-const-arguments.full.stderr
error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/impl-trait-with-const-arguments.rs:23:20
   |
LL |     assert_eq!(f::<4usize>(Usizable), 20usize);
   |                    ^^^^^^ explicit generic argument not allowed

error: aborting due to previous error

